# ferre-rag-model

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  agent_tools.py  cli.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  pyproject.toml
.claude/: settings.local.json
metadata/: ferre_archive_metadata.json  ferre_images_all_metadata_merged.json  ferre_images_fashion_show_photos_metadata_FW1986-87_SS1987.json  ferre_images_fashion_show_photos_metadata_FW1987-88_SS1988.json  generate_metadata.py  generate_metadata_image.py  generate_metadata_text.py
metadata/grounded_image_map/: FW1986-87_all.json  FW1987-88_all.json  SS1988_all.json
metadata/grounded_outfits/: SS1987_all.json  SS1988_all.json
scripts/: test_cli_filter_parse.py  test_metadata_merge_local.py
src/api-service/: .gitignore  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  pyproject.toml
src/api-service/api/: Dockerfile  db.py  service.py
src/api-service/api/models/: fashion_item.py
src/api-service/api/routers/: llm_agent_chat.py  llm_chat.py  llm_rag_chat.py
src/api-service/api/seeds/: fashion_items.json  generated_image_metadata.jsonl  generated_image_metadata_final.jsonl  generated_image_metadata_fixed_paths.jsonl  initial_database_loading.jsonl  seed.py
src/api-service/api/utils/: agent_orchestrator.py  agent_tools.py  chat_utils.py  gcs_utils.py  llm_agent_utils.py  llm_rag_utils.py  llm_utils.py  retrieval_tools.py
src/frontend-react/: .dockerignore  Dockerfile  docker-shell.sh  next.config.js  package-lock.json  package.json  (+3 more)
(+130 files in other folders)
