[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "google-genai>=1.39.1",
    "google-cloud-aiplatform>=1.47.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "pymupdf>=1.23.0",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["images*", "metadata*"]
exclude = ["tests*"]
