[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.19.0",
    "chromadb>=1.3.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.13.0.2",
    "google-cloud-aiplatform>=1.91.0",
    "google-genai>=1.47.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.34.3",
]
